opam-version: "2.0"
maintainer: "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
authors: [ "Christophe Troestler"
           "Vincent Hugot" ]
license: "LGPL-3.0 with OCaml linking exception"
homepage: "https://github.com/Chris00/ANSITerminal"
dev-repo: "git+https://github.com/Chris00/ANSITerminal.git"
bug-reports: "https://github.com/Chris00/ANSITerminal/issues"
doc: "https://Chris00.github.io/ANSITerminal/doc"
tags: [ "terminal"  ]
build: [
  [ "jbuilder" "subst" ] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs ]
  [ "jbuilder" "runtest" "-p" name "-j" jobs ] {with-test}
]
depends: [
  "ocaml"
  "jbuilder" {build}
  "base-bytes"
  "base-unix"
]
