opam-version: "2.0"
maintainer: "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
authors: [ "Christophe Troestler"
           "Vincent Hugot" ]
license: "LGPL-3.0 with OCaml linking exception"
homepage: "https://github.com/Chris00/ANSITerminal"
dev-repo: "git+https://github.com/Chris00/ANSITerminal.git"
bug-reports: "https://github.com/Chris00/ANSITerminal/issues"
doc: "https://Chris00.github.io/ANSITerminal/doc"
tags: [ "terminal"  ]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml"
  "dune" {build}
  "base-bytes"
  "base-unix"
]
